# determa

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml  release.yml
node/: README.md  package.json
node/test/: dispatch.test.js
python/: README.md  pyproject.toml
python/src/determa/: _cli.py
python/tests/: test_cli.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
rust/tests/: dispatch.rs
